<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_img"
    android:orientation="vertical">

    <include layout="@layout/main_toolbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="21dp"
        android:layout_marginRight="21dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="113dp"
            android:layout_height="138dp"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:src="@drawable/nami_logo_wht" />

        <EditText
            android:id="@+id/edOldpassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="34dp"
            android:background="@drawable/white_rounded_rectangle"
            android:gravity="start|center_vertical"
            android:hint="@string/old_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="27dp"
            android:paddingEnd="27dp"
            android:singleLine="true"
            android:textColor="@color/text_color_tertiary"
            android:textColorHint="@color/text_color_tertiary" />

        <EditText
            android:id="@+id/edNewPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="34dp"
            android:background="@drawable/white_rounded_rectangle"
            android:gravity="start|center_vertical"
            android:hint="@string/new_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="27dp"
            android:paddingEnd="27dp"
            android:singleLine="true"
            android:textColor="@color/text_color_tertiary"
            android:textColorHint="@color/text_color_tertiary" />

        <EditText
            android:id="@+id/edCofirm_NewPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="34dp"
            android:background="@drawable/white_rounded_rectangle"
            android:gravity="start|center_vertical"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"

            android:paddingStart="27dp"
            android:paddingEnd="27dp"
            android:singleLine="true"
            android:textColor="@color/text_color_tertiary"
            android:textColorHint="@color/text_color_tertiary" />

        <Button
            android:id="@+id/btnChange_user_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="34dp"
            android:layout_marginBottom="34dp"
            android:background="@drawable/green_rounded_rectangle"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>